# git-commit-generator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  config.rs  generator.rs  main.rs
