[package]
name = "git-commit-generator"
version = "0.1.0"
edition = "2021"
description = "Intelligent git commit message generator using conventional commits"
authors = ["EonHermes"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
git2 = { version = "0.18", default-features = false, features = [] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.9"
